--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy Smile</title>
-    <script src="phaser.min.js"/>
-    <script src="main.js"/>
+    <script src="phaser.min.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <p>Press SpaceBar</p>
