--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <title>Flappy Smile</title>
     <script src="phaser.min.js"></script>
     <script src="main.js"></script>
+    <style>
+        body{
+            width: 100%;
+            height: 100%;
+            background-color: #64C1C4;
+            text-align: center;
+            padding-top: 30px;
+        }
+       #info{
+           font-size: 20px;
+       }
+        #game{
+            position: relative;
+            height : 490px;
+            width : 400px;
+            margin:0px auto;
+        }
+
+    </style>
 </head>
 <body>
-    <p>Press SpaceBar</p>
-    <div id="gameDiv"></div>
+    <div id="game"></div>
+    <div id="info">SpaceBar | Left Mouse : Fly</div>
 </body>
 </html>
