--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
         body{
             width: 100%;
             height: 100%;
-            background-color: #64C1C4;
+            background-color: #ffc;
             text-align: center;
             padding-top: 30px;
         }
@@ -27,6 +27,6 @@
 </head>
 <body>
     <div id="game"></div>
-    <div id="info">SpaceBar | Left Mouse : Fly</div>
+    <div id="info">SpaceBar | Left Mouse : Jump</div>
 </body>
 </html>
