--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Flappy Smile</title>
     <script src="phaser.min.js"></script>
     <script src="main.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+    <link rel=stylesheet type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <style>
-        body{
+        body {
+            font-family: 'Press Start 2P', cursive;
             width: 100%;
             height: 100%;
             background-color: #ffc;
             text-align: center;
-            padding-top: 30px;
+            padding-top: 10px;
         }
-       #info{
-           font-size: 20px;
-       }
-        #game{
+        
+        #info {
+            margin-top: 5px;
+            font-size: 13px;
+        }
+        
+        #game {
             position: relative;
-            height : 490px;
-            width : 400px;
-            margin:0px auto;
+            height: 490px;
+            width: 400px;
+            margin: 0px auto;
         }
-
     </style>
 </head>
+
 <body>
+    <h1>Flappy Smile</h1>
     <div id="game"></div>
     <div id="info">SpaceBar | Left Mouse : Jump</div>
 </body>
+
 </html>
